--- a/Literatur.bib
+++ b/Literatur.bib
@@ -70,6 +70,21 @@
   url    = {https://www.cncf.io/wp-content/uploads/2020/08/rfma-servicemesh-cncf.pdf},
 }
 
+@WWW{pic-k8s-overview,
+  author = {Ashish Patel},
+  date   = {2021-08-12},
+  title  = {Kubernetes — Architecture Overview},
+  url    = {https://bit.ly/3sMQyEE},
+}
+
+@WWW{edge-overview,
+  author = {Wikipedia},
+  date   = {2019-09-10},
+  editor = {NoMore201},
+  title  = {Wikipedia: Edge computing infrastructure},
+  url    = {https://en.wikipedia.org/wiki/File:Edge_computing_infrastructure.png},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
