heute war ich fleißig

--- a/Literatur.bib
+++ b/Literatur.bib
@@ -101,6 +101,71 @@
   url         = {https://ieeexplore.ieee.org/document/8567693},
 }
 
+@WWW{k8sdnslocal,
+  author = {The Kubernetes Authors},
+  date   = {2022-01-31},
+  editor = {Tim Bannister},
+  title  = {Using NodeLocal DNSCache in Kubernetes clusters},
+  url    = {https://kubernetes.io/docs/tasks/administer-cluster/nodelocaldns/},
+}
+
+@Report{hal-kubeedge,
+  author      = {Karim, Manaouil and Adrien, Lebre},
+  date        = {2020-10-22},
+  institution = {Inria Rennes},
+  title       = {Kubernetes and the Edge?},
+  type        = {resreport},
+}
+
+@Report{k8s-sharping-edge,
+  author      = {David, Haja and Mark, Szalay and Balazs, Sonkoly and Gergely, Pongracz and Laszlo, Toka},
+  date        = {2020-03-17},
+  institution = {MTA-BME Network SoftwarizationResearch Group},
+  title       = {Sharpening Kubernetes for the Edge},
+  type        = {resreport},
+}
+
+@WWW{tk-k8s-edge-scheduler,
+  author = {Karsten, Reincke and Lukas, Steiner},
+  date   = {2019-03-31},
+  editor = {Karsten, Reincke and Lukas, Steiner},
+  title  = {k8s-edge-scheduler},
+  url    = {https://github.com/telekom/k8s-edge-scheduler},
+}
+
+@Report{5g-k8s-scheduler,
+  author      = {Michael, Chima Ogbuachi and Anna, Reale and Peter, Suskovics and Benedek, Kov ´ acs},
+  date        = {2020-03-01},
+  institution = {SoftCOM},
+  title       = {Context-Aware Kubernetes Scheduler forEdge-native Applications on 5G},
+  type        = {resreport},
+}
+
+@WWW{google-mcs,
+  author = {Google Inc.},
+  date   = {2022-02-15},
+  editor = {Google Inc.},
+  title  = {Multi-Cluster-Dienste},
+  url    = {https://cloud.google.com/kubernetes-engine/docs/concepts/multi-cluster-services},
+}
+
+@WWW{kubefed-github,
+  author = {The Kubernetes Authors},
+  date   = {2022-03-10},
+  editor = {The Kubernetes Authors},
+  title  = {Kubernetes Cluster Federation},
+  url    = {https://github.com/kubernetes-sigs/kubefed},
+}
+
+@Report{dsr-method,
+  author      = {Marian, Benner Wickner and Ralf, Kneuper and Inga, Schlömer},
+  date        = {2020-11-01},
+  institution = {IUBH Internationale Hochschule},
+  title       = {Leitfaden für die Nutzung von Design Science Research in Abschlussarbeiten},
+  type        = {resreport},
+  isrn        = {2512-319X},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
